<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/globalopts_graphics_tab"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/globalopts_graphics_detail_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:text="@string/globalopts_graphics_detail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/globalopts_graphics_detail_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="4dp"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/globalopts_graphics_detail_level"
        android:layout_below="@+id/globalopts_graphics_detail_level"
        android:text="@string/globalopts_graphics_fast"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/globalopts_graphics_detail_level"
        android:layout_alignRight="@+id/globalopts_graphics_detail_level"
        android:text="@string/globalopts_graphics_slow"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/ok_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/done" />

</RelativeLayout>
