<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:baselineAligned="false" >

    <ImageView
        android:id="@+id/title_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/title_icon"
        android:text="War Worlds"
        style="@style/TitleText" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="@dimen/tablet_margin"
        android:layout_marginLeft="@dimen/tablet_margin"
        android:layout_marginRight="@dimen/tablet_margin"
        android:padding="4dp"
        android:shadowColor="#000"
        android:shadowDx="2.0"
        android:shadowDy="2.0"
        android:shadowRadius="1.0"
        android:text="@string/empire_setup_welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/setup_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/tablet_margin"
        android:layout_marginRight="@dimen/tablet_margin"
        android:padding="4dp"
        android:text="@string/empire_setup_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/empire_setup_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/tablet_margin_5dp"
        android:layout_marginRight="@dimen/tablet_margin_5dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/empire_setup_name_hint"
        android:imeOptions="actionDone"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/tablet_margin"
        android:layout_marginRight="@dimen/tablet_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/empire_setup_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            style="@style/Button" />

        <Button
            android:id="@+id/empire_setup_done"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:text="@string/done"
            style="@style/Button" />

    </LinearLayout>

</RelativeLayout>