<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/empire_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/app_icon" />

    <TextView
        android:id="@+id/empire_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/empire_icon"
        android:layout_toRightOf="@id/empire_icon"
        android:text="Empire name goes here"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/fleet_btn"
        style="@style/Button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/fleet" />

    <Button
        android:id="@+id/colony_btn"
        style="@style/Button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/fleet_btn"
        android:text="@string/colonies" />

    <Button
        android:id="@+id/overview_btn"
        style="@style/Button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/colony_btn"
        android:text="@string/overview" />

    <RelativeLayout
        android:id="@+id/overview_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/empire_icon" >

        <TextView
            android:id="@+id/overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/empire_overview_format" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/fleet_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/empire_icon" >

        <au.com.codeka.warworlds.ctrl.FleetList
            android:id="@+id/fleet_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/colony_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/empire_icon" >

        <au.com.codeka.warworlds.ctrl.ColonyList
            android:id="@+id/colony_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progress_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/empire_icon" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>
    
</RelativeLayout>
